2009-05-14  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Order non-positioned task launcher entries case-insensitively.

	* src/launcher/hd-launcher-tree.c:

2009-05-13  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Order task launcher entries alphabetically if they don't have a position.
	Fixes: NB#116215

	* src/launcher/hd-launcher-item.c: Add hard-coded positions for default
	apps in 'Applications' subgroup.
	* src/launcher/hd-launcher-tree.c:

2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* data/transitions.ini: X now blanks for less time so have shortened
	  the blanking time in the transition to the planned 300ms 
	* src/util/hd-transition.h
	* src/util/hd-transition.c: Made functions for animation curves public
	* src/launcher/hd-launcher.c: Now don't use easing in, only ease out
	  when doing launch animation. This makes it smoother given the small
	  time period allowed for it.

2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-util.c
	* src/util/hd-util.h: Added hd_util_get_cursor_position
	* src/launcher/hd-launcher.c: Now make app loading transition
	  start from last mouse press location (for desktop shortcuts and
	  any app not launched from the launcher).

2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher.c: Removed debug print

2009-05-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* configure.ac: added linking to libhildondesktop (It was already
	  required in debian/control)
	* src/home/hd-home.c: Use libhildondesktop to write application
	  screenshots in PVR format instead of PNG (for faster load times)
	* src/launcher/hd-launcher.c: Switch to loading application screenshots
	  in PVR file format (and clipping them to size if required). Also fix
	  for the application launch animation starting from the location of
	  the previously clicked tile - not the currently clicked one.
